objects/copado__ExtensionConfiguration__c.object
<CustomObject>
    <description>Defines the configuration for a specific extension.</description>
    <fields>
        <fullName>copado__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__ExtensionApplication__c</fullName>
        <inlineHelpText>Select the type of Application that relates to the extension.</inlineHelpText>
        <label>Extension Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Extension_Name__c</fullName>
        <inlineHelpText>Select the name of the CMDT Extension Record this integration relates to.</inlineHelpText>
        <label>Extension Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Setup Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <inlineHelpText>Select the type of test you want to execute with the Extension.</inlineHelpText>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static Code Analysis</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration</label>
    <listViews>
        <fullName>copado__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>